style.css
#row {
  font-family: NYTFranklinLight;
  font-size: 14px;
  padding-left: 10px;
  z-index: 9999;
  opacity: 0.2;
}

.scrollwindow {
  overflow-y: auto;
  height:150px;
}

.hamburger {
  position: fixed;
  z-index: 9999;
  padding-left: 72%;
  padding-top: 20px;
}

.hamburger:hover { cursor: pointer; }

#bar1 {
  background-color: white;
  border-radius: 1px;
  height: 3px;
  width: 25px;
  opacity: 0.2;
  -webkit-filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.8));
}

#bar2 {
  background-color: white;
  border-radius: 1px;
  height: 3px;
  width: 25px;
  opacity: 0.2;
  -webkit-filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.8));
}

#bar3 {
  background-color: white;
  border-radius: 1px;
  height: 3px;
  width: 25px;
  opacity: 0.2;
  -webkit-filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.8));
}

.hamburger div:not(:last-child) { margin-bottom: 5px; }

nav {
  background: rgba(0, 0, 0, 0.5);
  display: inline-block;
  position: fixed;
  height: 100vh;
  width: 300px;
  right: 0px;
  -webkit-transition: -webkit-transform 0.3s;
  transition: transform 0.3s;
}

nav, .hamburger, .cover {
  -webkit-transition: -webkit-transform .3s;
  transition: transform .3s;
}

.sidenav-active nav, .sidenav-active .hamburger, .sidenav-active .cover {
  -webkit-transform: translateX(300px);
  -ms-transform: translateX(300px);
  transform: translateX(300px);
}

.main {
  -webkit-transition: margin-right .3s;
  transition: margin-right .3s;
  width: 100%;
  height: 100%:
  background-color:black;

}

#overlay{
    opacity:0.8;
    background-color:#000;
    position:fixed;
    width:100%;
    height:100%;
    top:0px;
    left:0px;
}

.sidenav-active .main { margin-right: 300px; }

#clues_x {
  color: white;
  opacity: 1;
  padding-right: 15px;

}

#clues_x::-webkit-scrollbar {
    width: 8px;
}

#clues_x::-webkit-scrollbar-thumb {
    background-color: #ffffff;
}

#clues_x::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 2px #ffffff;
    background-color: #000000;
}

#clues_y {
  color: white;
  opacity: 1;
  padding-right: 15px;
}

#clues_y::-webkit-scrollbar {
    width: 8px;
}

#clues_y::-webkit-scrollbar-thumb {
    background-color: #ffffff;
}

#clues_y::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 2px #ffffff;
    background-color: #000000;
}

#clues_z {
  color:white;
  opacity: 1;
  padding-right: 15px;
}

#clues_z::-webkit-scrollbar {
    width: 8px;
}

#clues_z::-webkit-scrollbar-thumb {
    background-color: #ffffff;
}

#clues_z::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 2px #ffffff;
    background-color: #000000;
}

a:hover {
  font-weight: bold;
}

.modal {
  margin:0;
  position:absolute;
  top:50%;
  left: 50%;
  margin-right: -50%;
  transform:translate(-50%, -50%);
  background-color: white;
  border-radius: 20px;
  width: 300px;
  height: 150px;
  box-shadow: 3px 3px 3px 1px grey;
}

#OK {
  font-family: NYTFranklinBold;
  margin:0;
  position:absolute;
  top:65%;
  left: 50%;
  margin-right: -50%;
  transform:translate(-50%, -50%);
  background-color: rgb(81, 139, 246);
  border-radius: 16px;
  color: white;
  padding: 8px 70px;
  text-align: center;
  display: inline-block;
  font-size: 15px;
  cursor: pointer;
  box-shadow: 0px 5px rgb(29,92,193);
}

#autoCompleteButton {
  z-index: 9999;
  border: 1px solid white;
  background-color: rgba(0,0,0,0.5);
  color: white;
  font-family: NYTFranklinMedium;
  padding: 10px 25px;
  display: inline-block;
  font-size: 16px;
  position:absolute;
  left:2%;
  top: 90%;
  display: none;

}

.logo {
  -webkit-filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.9));
}

.autoCompletebutton:hover {
  cursor: pointer;
}

#finish {
  margin:0;
  position:absolute;
  top:50%;
  left: 50%;
  margin-right: -50%;
  transform:translate(-50%, -50%);
  background-color: white;
  width: 400px;
  height: 350px;
  box-shadow: 3px 3px 3px 1px grey;
  display: none;
}

hr {
  width: 100%;
}

/* The Close Button */
.close {
    position: absolute;
    color: #aaa;
    left: 94%;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

